feat: expiresLonger, feed returns data from posts, cors fixed